# ezio

./: Changelog.md  License.txt  PKGBUILD  Readme.md  justfile  plotting.ipynb  pyproject.toml
.github/workflows/: frontend.yml  generator.yml  release.yml  test.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  data-fetching.ts  index.css  main.tsx  types.ts
frontend/src/assets/: Readme.md
frontend/src/components/: info-overlay.tsx  map.tsx  photo-gallery.tsx
src/ezio/: __init__.py  version.py
src/ezio/adapters/: fake_tiles.py  geojson.py  gpx.py  jawg.py  noop_progress.py  photo_source.py  rich_progress.py  textual_segment_info_source.py
src/ezio/domain/: geo.py  model.py  types.py  wizard.py
src/ezio/domain/generator/: __init__.py  photos.py  plot.py
src/ezio/domain/generator/frontend/: __init__.py
src/ezio/domain/model/: __init__.py  old_model.py
src/ezio/ports/: progress.py  segment_info_source.py  tilesource.py  tracksource.py
tests/: conftest.py  test_frontend_generator.py  test_geo.py  test_gpx.py  test_manual.py  test_model.py  test_photos.py  test_track_loader.py  test_wizard.py  utils.py
tests/data/: balkan-simplified-without-altitude.gpx  balkan-simplified.geojson  balkan-simplified.gpx  index.html  lancashire.geojson  old-data.json  three-test-lines-multiline.geojson
