[project]
name = "ezio"
version = "0.1.0"
description = "Display a recorded route as a static website"
readme = "Readme.md"
authors = [
    { name = "Pascal Sommer" }
]
requires-python = ">=3.14"
dependencies = [
    "gpxpy>=1.6.2",
    "pydantic-geojson>=0.3.2",
    "requests>=2.33.0",
]

[project.scripts]
ezio = "ezio:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "types-requests>=2.33.0.20260327",
]
