[project]
name = "ezio"
version = "0.1.0" # remember to also update the version in version.py
description = "Display a recorded route as a static website"
readme = "Readme.md"
authors = [
    { name = "Pascal Sommer" }
]
requires-python = ">=3.14"
dependencies = [
    "gpxpy>=1.6.2",
    "pillow>=12.1.1",
    "pydantic-geojson>=0.3.2",
    "requests>=2.33.0",
    "rich>=14.3.3",
    "textual>=8.2.3",
]

[project.scripts]
ezio = "ezio:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "textual-dev>=1.8.0",
    "types-requests>=2.33.0.20260327",
]

[tool.pyright]
reportUnusedCallResult = "none"
